# vocabex

./: .gitignore  README.md
code/: .gitignore  pyproject.toml
code/data/processed/exercises/: ABA1_C_E01.txt  ABA1_C_E02.txt  ABA1_C_E03.txt  ABA1_C_E04.txt  ABA1_C_E05.txt  ABA1_C_E06.txt  ABA1_C_E07.txt  ABA1_C_E08.txt  ABA1_C_E09.txt  ABA1_C_E10.txt  ABA1_C_E11.txt  ABA1_C_E12.txt  ABA1_C_E13.txt  ABA1_C_E14.txt  ABA1_C_E15.txt  ABA1_C_T01.txt  ABA1_C_T02.txt  ABJ1_D_E01.txt  ABJ1_D_E02.txt  ABJ1_D_E03.txt  ABJ1_D_E04.txt  ABJ1_D_E05.txt  ABJ1_D_E07.txt  ABJ1_D_E08.txt  ABJ1_D_E09.txt  ABJ1_D_E10.txt  ABJ1_D_E11.txt  ABJ1_D_E12.txt  ABJ1_D_E13.txt  ABJ1_D_E14.txt  ABJ1_D_E15.txt  ABJ1_D_T01.txt  AHJ1_S_E01.txt  AHJ1_S_E02.txt  AHJ1_S_E03.txt  AHJ1_S_E04.txt  AHJ1_S_E05.txt  AHJ1_S_E06.txt  AHJ1_S_E08.txt  AHJ1_S_E09.txt  (+1370 more)
code/data/processed/posttests/: ABJ1_D.txt  AKA1_S.txt  BEA1_S.txt  CBH1_J.txt  CDG1_D.txt  CGT1_S.txt  CJS1_J.txt  CMJ1_S.txt  CTV1_C.txt  CXY1_S.txt  CZY1_S.txt  EPA1_C.txt  EPE1_J.txt  FDS1_S.txt  FEM1_I.txt  FGC2_S.txt  FJA1_J.txt  FKN1_I.txt  FLJ1_J.txt  FLR1_I.txt  FMH1_I.txt  FTE1_D.txt  ILA1_I.txt  JTS1_J.txt  (+21 more)
code/outputs/: cohen_kappa_exercise_format_results.txt  cohen_kappa_exercise_type_results.txt  fleiss_kappa_error_type_results.txt
code/resources/: cohen_kappa_exercise_format.csv  cohen_kappa_exercise_type.csv  fleiss_kappa_error_type.csv  texts.csv
code/scripts/: analyze_exercises.py  cohen_kappa.py  fleiss_kappa.py
code/src/vocabex/: cohen_kappa.py  constants.py  context.py  data.py  fleiss_kappa.py  preprocess.py  stats.py
(+100 files in other folders)
